@@ -1,9 +1,10 @@
 Changelog for Notify
 
-Notify 1.1.0 pl
+Notify 1.1.1 pl
 ---------------
 Secure Unsubscribe/Manage Preferences link in every email
 Option to require all selected tags for user selection
+Displays number of successful sends
 
 Notify 1.0.5 pl
 ---------------
